@@ -10,7 +10,7 @@ $EM_CONF[$_EXTKEY] = array(
 	'description' => 'This containts a base class which you can use to make your extensions independant from any specific table. And it can be used to make multiple language support with a separate language overlay table.',
 	'category' => 'misc',
 	'shy' => 0,
-	'version' => '0.5.2',
+	'version' => '0.6.0',
 	'dependencies' => '',
 	'conflicts' => '',
 	'priority' => '',
