@@ -1,64 +1,0 @@
-<?php
-/***************************************************************
-*  Copyright notice
-*
-*  (c) 2005-2011 Franz Holzinger <franz@ttproducts.de>
-*  All rights reserved
-*
-*  This script is part of the Typo3 project. The Typo3 project is
-*  free software; you can redistribute it and/or modify
-*  it under the terms of the GNU General Public License as published by
-*  the Free Software Foundation; either version 2 of the License, or
-*  (at your option) any later version.
-*
-*  The GNU General Public License can be found at
-*  http://www.gnu.org/copyleft/gpl.html.
-*  A copy is found in the textfile GPL.txt and important notices to the license
-*  from the author is found in LICENSE.txt distributed with these scripts.
-*
-*
-*  This script is distributed in the hope that it will be useful,
-*  but WITHOUT ANY WARRANTY; without even the implied warranty of
-*  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-*  GNU General Public License for more details.
-*
-*  This copyright notice MUST APPEAR in all copies of the script!
-***************************************************************/
-/**
- * Part of the table (Table Library) extension.
- *
- * div functions
- *
- * @author	Franz Holzinger <franz@ttproducts.de>
- * @package TYPO3
- * @subpackage table
- *
- *
- */
-
-
-class tx_table_div {
-
-	/**
-	 * Creates and executes a SELECT SQL-statement
-	 * Using this function specifically allow us to handle the LIMIT feature independently of DB.
-	 * Usage count/core: 340
-	 *
-	 * @param	string		List of fields to select from the table. This is what comes right after "SELECT ...". Required value.
-	 * @param	string		Table(s) from which to select. This is what comes right after "FROM ...". Required value.
-	 * @param	string		Optional additional WHERE clauses put in the end of the query. NOTICE: You must escape values in this argument with $this->fullQuoteStr() yourself! DO NOT PUT IN GROUP BY, ORDER BY or LIMIT!
-	 * @param	string		Optional GROUP BY field(s), if none, supply blank string.
-	 * @param	string		Optional ORDER BY field(s), if none, supply blank string.
-	 * @param	string		Optional LIMIT value ([begin,]max), if none, supply blank string.
-	 * @return	pointer		MySQL result pointer / DBAL object
-	 */
-	public function exec_SELECTquery($select_fields, $from_table, $where_clause, $groupBy = '', $orderBy = '',$limit = '') {
-	$GLOBALS['TYPO3_DB']->exec_SELECTquery($select_fields, $from_table, '1=1' . $where_clause, $groupBy, $orderBy, $limit);
-	 }
-}
-
-
-if (defined('TYPO3_MODE') && $TYPO3_CONF_VARS[TYPO3_MODE]['XCLASS']['ext/table/lib/class.tx_table_div.php']) {
-	include_once($TYPO3_CONF_VARS[TYPO3_MODE]['XCLASS']['ext/table/lib/class.tx_table_div.php']);
-}
-
