@@ -1,6 +1,7 @@
 2016-10-10 Franz Holzinger <franz@ttproducts.de>
 	* new feature: add COLLATE in SQL functions if the new parameter $collateConf has been set
 	* pass the fallback parameter to SQL functions
+	* remove class.tx_table_div.php
 
 2016-05-10 Franz Holzinger <franz@ttproducts.de>
 	* support for PHP 7
